<resources>
    <string name="app_name">SisonkeBankApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome to the Sisonke Bank App"</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_account">Don\'t have an account? <font color='#0000FF'><u>Register here</u></font></string>

    <string name="enter_registration_details">Enter your details below to register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login_here">Already have an account?<font color='#0000FF'> <u>Login here</u></font></string>

    <string name="view_account_balance_button">VIEW ACCOUNT BALANCE</string>
    <string name="view_account_balance"> View Account Balance</string>
    <string name="transfer_between_accounts_button">TRANSFER BETWEEN ACCOUNTS</string>
    <string name="logout_button">LOGOUT</string>

    <string name="currently_logged_in_user">%1$s</string>
    <string name="account_holder_name_text">Account Holder Name:</string>
    <string name="account_holder_surname_text">Account Holder Surname:</string>
    <string name="current_account_balance_text">Current Account Balance:</string>
    <string name="savings_account_balance_text">Savings Account Balance:</string>
    <string name="account_holder_name">%1$s</string>
    <string name="account_holder_surname">%1$s</string>
    <string name="current_account_balance">%1$s</string>
    <string name="savings_account_balance">%1$s</string>

    <string name="transfer_to_from_accounts">Transfer to/from Accounts</string>
    <string name="enter_transfer_amount">Enter Transfer Amount: R</string>
    <string name="transfer_from">Transfer from:</string>
    <string name="transfer_button">TRANSFER</string>
    <string-array name="transfer_options">
        <item>Current to Savings</item>
        <item>Savings to Current</item>
    </string-array>
    <string name="todo">TODO</string>
</resources>